app-person-table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,9 @@
-<div class="container mt-4">
-  <div class="d-flex gap-5 align-items-center">
-    <div class="bg-info p-2">
-      <h1>Coding Factory 5</h1>
-      <h2>Introduction to Angular</h2>
-    </div>
-    <div class="bg-success p-2 text-light">
-      <h3>Welcome to Angular</h3>
-      <p>Hello <strong>Christodoulos</strong>! Nice to meet you.</p>
-    </div>
-  </div>
+<div class="container"><h1>Welcome to angular</h1>
+<p>
+  hello <strong>{{name}}</strong>
+  Nice to meet you
+</p>
+
+<app-person-table>
+</app-person-table>
 </div>
