--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
   Nice to meet you
 </p>
 
-<app-person-table>
-</app-person-table>
+<div class="d-flex gap-5 text-nowrap">
+  <app-person-table></app-person-table>
+  <app-person-table></app-person-table>
+  <app-person-table></app-person-table>
+</div>
 </div>
