--- a/src/app/components/person-table/person-table.component.html
+++ b/src/app/components/person-table/person-table.component.html
@@ -4,7 +4,7 @@
   </div>
 }@else {
 <p>person-table works!</p>
-<table class="table table-bordered w-50">
+<table class="table table-bordered">
     <caption class="caption-top fw-bold bg-primary text-light text-center">
       Person Details
     </caption>
@@ -25,7 +25,7 @@
       <td class="ps-2">{{ person.email }}</td>
     </tr>
     <tr>
-      <td class="fw-semibold text-end">Adress</td>
+      <td class="fw-semibold text-end">Address</td>
       <td class="ps-2">{{ person.address }}</td>
     </tr>
   </table>
