--- a/src/app/components/person-table/person-table.component.html
+++ b/src/app/components/person-table/person-table.component.html
@@ -24,9 +24,21 @@
       <td class="fw-semibold text-end">Email</td>
       <td class="ps-2">{{ person.email }}</td>
     </tr>
-    <tr>
-      <td class="fw-semibold text-end">Address</td>
-      <td class="ps-2">{{ person.address }}</td>
-    </tr>
+
+    @if (isPerson()) {
+      <tr>
+        <td class="fw-semibold text-end">Address</td>
+        <td class="ps-2">{{ person["address"] }}</td>
+      </tr>
+    }
+
+    @if (isEPerson()) {
+      <tr>
+        <td class="fw-semibold text-end">Address</td>
+        <td class="ps-2">{{ person["education"] }}</td>
+      </tr>
+    }
+
+
   </table>
 }
