--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div class="d-flex flex-column gap-2">
 
-  <nav class="navbar navbar-dark bg-primary justify-content-between">
+  <nav class="navbar navbar-dark bg-primary justify-content-between rounded">
 
     <a role="button" class="navbar-brand ms-3" routerLink="">
       CF5 - Angular Introduction
